<resources>
    <string name="app_name">DentalMarket</string>
    <string name="facebook_app_id">1607355972666272</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="error_invalid_email">Hatalı mail adresi</string>
    <string name="error_invalid_password">Şifre çok kısa</string>
    <string name="error_incorrect_password">Şifre hatalı</string>
    <string name="error_field_required">Gerekli alan</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_product_detail">Ürün İncele</string>
    <string name="forgot_password">Şifremi Unuttum?</string>
    <string name="create_new_account">Yeni Hesap Aç</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- DENTAL.MARKET STATIC -->
    <string name="terms_warning">Kayıt olarak dental.market kullanım koşullarını kabul etmiş sayılırsınız</string>
    <string name="password_link_request">Şifre Yenileme Linki Gönder</string>
    <string name="password_link_request_desc">Şifrenizi değiştirmeniz için email hesabınıza bir link gönderilecektir. Linke tıklayarak şifrenizi yenileyebilirsiniz.</string>
    <string name="password_refresh_link_sent_to_mail">Şifrenizi yenileme linki mail adresinize gönderilmiştir</string>
    <string name="name">Adı</string>
    <string name="surname">Soyadı</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="password_check">Şifre Tekrar</string>
    <string name="profession">Mesleğiniz</string>
    <string name="city">Şehir</string>
    <string name="borough">İlçe</string>
    <string name="phone">Sabit Telefon</string>
    <string name="mobile_phone">Cep Telefonu</string>
    <string name="action_sign_up">Kayıt Ol</string>
    <string name="action_sign_up_short">Kaydol</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="save">Kaydet</string>
    <string name="publish">Yayınla</string>
    <string name="enter_message">Bir mesaj yazın</string>
    <string name="new_campaigns_added">Yeni kampanyalarımız eklenmiştir</string>
    <string name="dental_ok">Tamam</string>
    <string name="alert_product_not_found">&quot;%1$s&quot; kategorisinde hiç ürün bulunmamaktadır.</string>
    <string name="title_category_products">Kategori Ürünleri</string>
    <string name="unexpected_case_error">Beklenmedik bir durum ile karşılaşıldı</string>
    <string name="unexpected_network_error">Beklenmedik network hatası ile karşılaşıldı</string>
    <string name="unexpected_error_while_getting_profession_list">Meslek listesi getirilirken beklenilmeyen bir durum ile karşılaşıldı</string>
    <string name="unexpected_error_while_getting_city_list">Şehir listesi getirilirken beklenilmeyen bir durum ile karşılaşıldı</string>
    <string name="unexpected_error_while_getting_borough_list">İlçe listesi getirilirken beklenilmeyen bir durum ile karşılaşıldı</string>
    <string name="unexpected_error_while_updating_info">Bilgiler güncellenirken beklenilmeyen bir durum ile karşılaşıldı</string>
    <string name="unexpected_error_while_updating_page">Sayfa düzenlenirken hata ile karşılaşıldı</string>
    <string name="choose_profession">Mesleğinizi seçiniz</string>
    <string name="choose_city">Şehir seçiniz</string>
    <string name="choose_borough">İlçe seçiniz</string>
    <string name="enter_new_password_correctly">Yeni Şifrenizi Doğru Giriniz...</string>
    <string name="new_registration">Yeni Kayıt</string>
    <string name="registration_process_success">Kayıt işlemi başarıyla gerçekleştirildi</string>
    <string name="unknown">bilinmiyor</string>
    <string name="offer_status_active">Aktif</string>
    <string name="offer_status_inactive">Pasif</string>

    <!-- ALERT -->
    <string name="alert_volley_network_error">Network hatası ile karşılaşıldı...</string>
    <string name="alert_exception">Olağandışı bir durum ile karşılaşıldı...</string>

    <!-- RIGHT-TOP MENU -->
    <string name="action_settings">Settings</string>
    <string name="right_menu_login">Giriş</string>
    <string name="right_menu_profile">Profil</string>
    <string name="right_menu_messages">Mesajlar</string>
    <string name="right_menu_recent_products">İncelediğim Ürünler</string>
    <string name="right_menu_new_product">Yeni Ürün</string>
    <string name="right_menu_my_offer_requests">Teklif İsteklerim</string>
    <string name="right_menu_offer_requests">Teklif İstekleri</string>
    <string name="right_menu_share">Paylaş</string>
    <string name="right_menu_logout">Çıkış</string>
    <string name="right_menu_search">Ara</string>

    <!-- DRAWER MENU -->
    <string name="drawer_menu_dinamik_el_aksesuarlari">Dinamik El Aletleri Aks.</string>
    <string name="drawer_menu_beyazlatma">Beyazlatma</string>
    <string name="drawer_menu_dental_egitim">Dental Eğitim</string>
    <string name="drawer_menu_dinamik_el_aletleri">Dinamik El Aletleri</string>

    <!-- SHAREDPREFERENCES KEYS -->
    <string name="sp_dental_market">sp_dental_market</string>
    <string name="sp_user_id">userId</string>
    <string name="sp_user_json_str">userJsonString</string>

    <!-- PRODUCTDETAILFRAGMENT KEYS -->
    <string name="pdf_product_desc">Ürün Açıklaması</string>
    <string name="pdf_product_prop">Ürün Özellikleri</string>

    <!-- UNKNOWN KEYS -->
    <string name="unknown_name">(??????)</string>
    <string name="unknown_phone">(???)??? ?? ??</string>
    <string name="unknown_mail">(???@???)</string>
    <string name="empty_text">-</string>

    <!-- FONTAWESOME KEYS -->
    <string name="currency_turkish_lira">\uf195</string>
    <string name="currency_usd">\uf155</string>
    <string name="currency_euro">\uf153</string>
    <string name="currency_bitcoin">\uf15a</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_conversation_list">Sohbet Listesi</string>
    <string name="title_activity_message_list">Mesajlarınız</string>
    <string name="title_activity_main">Anasayfa</string>
    <string name="title_activity_product_add">Yeni Ürün</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="title_activity_offer">Teklif İsteklerim</string>
    <string name="title_activity_offer_create">Teklif İsteği Oluşturma</string>
    <string name="title_activity_offer_product_add">Teklif İsteği Ürün Ekleme</string>
    <string name="title_activity_offer_request_list">Teklif İstekleri</string>

    <!-- GOOGLE FIREBASE -->
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
