<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/right_menu_login"
        android:orderInCategory="100"
        android:title="@string/right_menu_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/right_menu_profile"
        android:orderInCategory="100"
        android:title="@string/right_menu_profile"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/right_menu_messages"
        android:orderInCategory="100"
        android:title="@string/right_menu_messages"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/right_menu_logout"
        android:orderInCategory="100"
        android:title="@string/right_menu_logout"
        android:visible="false"
        app:showAsAction="never" />

</menu>
